@@ -1,4 +1,7 @@
 1.4.0i2p1:
+    Multisite:
+    * 4040 FIX: Fix error in view about "No WATO folder ..." in case of host imported via cmcdump...
+
     WATO:
     * 4038 FIX: Fix exception in WATO when adding a new host...
     * 4039 FIX: Fix UnicodeEncodeError exception in WATO folder display...
